cmake_minimum_required(VERSION 3.10)
project(
	s2t_core
	VERSION 1.0
	LANGUAGES C CXX
)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

include(GNUInstallDirs)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})


file(RELATIVE_PATH _rel ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR} ${CMAKE_INSTALL_PREFIX})
if(APPLE)
	set(_rpath "@loader_path/${_rel}")
else()
	set(_rpath "\$ORIGIN/${_rel}")
endif()
file(TO_NATIVE_PATH "${_rpath}/${CMAKE_INSTALL_LIBDIR}" _CMAKE_INSTALL_RPATH)




find_package(s REQUIRED)

include(CMakePrintHelpers)
cmake_print_properties(
	TARGETS
		s::s2-shared
	PROPERTIES
		LOCATION
		IMPORTED_LOCATION_DEBUG
		IMPORTED_LOCATION_RELEASE
		IMPORTED_IMPLIB_DEBUG
		IMPORTED_IMPLIB_RELEASE
		INTERFACE_COMPILE_DEFINITIONS
		INTERFACE_COMPILE_OPTIONS
		INTERFACE_INCLUDE_DIRECTORIES
		INTERFACE_LINK_LIBRARIES
	)

cmake_print_properties(
	TARGETS
		s::s2-static
	PROPERTIES
		LOCATION
		IMPORTED_LOCATION_DEBUG
		IMPORTED_LOCATION_RELEASE
		IMPORTED_IMPLIB_DEBUG
		IMPORTED_IMPLIB_RELEASE
		INTERFACE_COMPILE_DEFINITIONS
		INTERFACE_COMPILE_OPTIONS
		INTERFACE_INCLUDE_DIRECTORIES
		INTERFACE_LINK_LIBRARIES
	)



add_executable(s2t s2t.c)
target_link_libraries(s2t PUBLIC s::s2-shared)
add_executable(s2a s2t.c)
target_link_libraries(s2a PUBLIC s::s2-static)

set_target_properties(
	s2t
	PROPERTIES
		# POSITION_INDEPENDENT_CODE 1
		SKIP_BUILD_RPATH OFF
		BUILD_WITH_INSTALL_RPATH OFF
		INSTALL_RPATH "${_CMAKE_INSTALL_RPATH}"
		INSTALL_RPATH_USE_LINK_PATH ON
		MAXOSX_RPATH ON
)


install(
	TARGETS
		s2t s2a
	ARCHIVE
		DESTINATION ${CMAKE_INSTALL_LIBDIR}
		COMPONENT lib
	LIBRARY
		DESTINATION ${CMAKE_INSTALL_LIBDIR}
		COMPONENT lib
	RUNTIME
		DESTINATION ${CMAKE_INSTALL_BINDIR}
		COMPONENT bin
	PUBLIC_HEADER
		DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
		COMPONENT dev
)
